# Pharabius

./: .gitignore  .importlinter  CHANGELOG.md  README.md  action.yml  pyproject.toml
Waves/: 02-v2.0-product-scope.md  04-quality-gate-rules-and-config.md  05-cli-command-ai-debt-gate.md  07-ci-examples.md  09-safety-boundary-and-risk-register.md  10-docs-and-release-plan.md  11-acceptance-checklist.md  README-Wave40-patchsets.md  README-Wave43-patchsets.md  README-Wave44-patchsets.md  README-Wave45-patchsets.md  README-Wave46-patchsets.md  README-Wave47-patchsets.md  README-Wave48-patchsets.md  README-Wave49-patchsets.md  README-Wave50-patchsets.md  README-Wave52-patchsets.md  README-Wave53-patchsets.md  README-v2.0.1-ci-gate-adoption-pack.md  README-v2.2.3-frontend-mvp-upload-ux-pack.md  README-v2.2.4-repository-identity-upload-ux-pack.md  README-v2.3.1-review-workflow-polish-pack.md  S01-docker-compose-runtime-smoke-test.md  S01-finding-detail-schema-migration.md  S01-platform-scaffold-fastapi-db-docker-model.md  S01-review-data-model-state-machine.md  S01-review-filters-undecided-decided-views.md  S01-upload-diagnostics-validation-report-readability.md  (+59 more)
platform/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
platform/backend/alembic/: env.py
platform/backend/alembic/versions/: 001_initial.py  002_review_decisions.py  003_finding_detail.py  004_evidence_records.py  005_work_packages.py  006_run_metadata_fields.py
platform/backend/scripts/: init_dev_db.py
platform/backend/src/pharabius_platform/: __init__.py  db.py  main.py
platform/backend/src/pharabius_platform/api/: __init__.py  api_keys.py  health.py  portfolio.py  repositories.py  reviews.py  run_comparison.py  upload.py  work_packages.py
platform/backend/src/pharabius_platform/middleware/: auth.py  errors.py
platform/backend/src/pharabius_platform/models/: __init__.py
platform/backend/src/pharabius_platform/schemas/: errors.py
platform/backend/src/pharabius_platform/services/: parser.py  storage.py  validator.py
platform/backend/tests/: test_evidence_resolution.py  test_finding_detail.py  test_frontend_mvp.py  test_repository_identity.py  test_review_workflow.py  test_run_comparison.py  test_run_history_navigation.py  test_runtime_validation.py  test_s01_scaffold.py  test_s01_upload_persistence.py  test_s02_alembic.py  test_s02_upload.py  test_s03_api_key_auth.py  test_s03_repositories.py  test_s04_endpoint_integration.py  test_s04_portfolio.py  test_s05_api_keys.py  test_s05_error_handling.py  test_s06_e2e.py  test_work_package_linkage.py
(+674 files in other folders)
