[project]
name = "pharabius"
version = "1.10.0"
description = "Repository-first technical debt intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
openai-compatible = ["httpx>=0.27.0"]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "mypy>=1.10.0",
  "import-linter>=2.0.0",
  "build>=1.2.0",
  "httpx>=0.27.0"
]

[project.scripts]
ai-debt = "pharabius.cli:app"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "C4",
  "RUF"
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=pharabius",
  "--cov-report=term-missing",
  "--cov-fail-under=80"
]

[tool.coverage.run]
branch = true
source = ["pharabius"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "if __name__ == .__main__.:",
  "pragma: no cover"
]

[tool.mypy]
python_version = "3.11"
packages = ["pharabius"]
strict = true
warn_unused_configs = true
ignore_missing_imports = true
